-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.461 2009-03-31 15:41:00 remko Exp $
-----------------------------------------------------------------------------------------

2009-03-31	remko
	* gmt_map.c (GMT_get_datum):	Reuse GMT_get_ellipsoid to capture <a>,<inv_f> format.
	* gmt_init.c:		Changed custom ELLIPSOID format to <a>[,<inv_f|b=<b>|f=<f>].
				Properly write out custom ELLIPSOID into .gmtdefaults4.

2009-03-30	pwessel
	* mgd77/mgd77.c:	To avoid Windows crashes, made sure free and GMT_free are
				used on the items allocated by strdup or GMT_memory, resp.
	* x2sys/x2sys.c:	---"---
				Wrong array argument passed for correction aux values.
	* x2sys/x2sys_datalist.c:	Only ASCII output had corrections (-L) applied.

2009-03-30	remko
	* gmt_init.c (GMT_get_ellipsoid):	When importing ellipsoid file, allow a,0,0;
				a,0,f; a,b,0; or a,b,f as ellipsoid parameters.
				If file does not exist, attempt to read name as a[/[b=|f=]f],
				meaning <semi-major axis>, b=<semi-minor axis>, f=<flattening>,
				or <inverse flattening>.
	* gmt_defaults.txt:	Adjusted accordingly. Also specified SEMI-major/minor axis.
	* gmt.h:		Removed pol_radius from ELLIPSOID structure. Never used.
	* Ellipsoids.txt:	Added Moon and planets (IAU2000).
				Allow 0, b, or 1/f as second ellipsoid parameter.
	* src/GNUmakefile:	Adjusted accordingly.
	* gmt_map.c (GMT_set_spherical):	Take mean radius from CURRENT ellipsoid setting.
				Call GMT_init_ellipsoid again, so also GMT_[K]M_PR_DEG get set.

2009-03-28	pwessel
	* imgsrc/img2google:	Added new script (modified from David Sandwell's prototype)
				that creates Google Earth overlay tiles from topo.11.1.img
	* ps2raster.c:	Enhanced -Wg for KML creation that allows user to specify document
					and layer name and the altitude mode of the image.
					
2009-03-26	pwessel
	* gmt_support.c:	Exceeded array bounds in GMT_read_cpt for hsv conversion.